--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          */
         async function fetchFlights() {
             // 🚨 這是最終的 Vercel 代理網址，已經替換
-            const PROXY_URL = "https://flight123-je2z.vercel.app/api/proxy"; 
+            const PROXY_URL = "https://flight123.vercel.app/api/proxy"; 
             let url = PROXY_URL;
             
             try {
